<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SignInActivity">
    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp" tools:srcCompat="@drawable/ic_movie_logo"
            android:id="@+id/iv_logo" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:contentDescription="TODO" app:srcCompat="@drawable/ic_movie_logo"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/inputEmailLayout">

        <com.google.android.material.textfield.TextInputEditText
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name" android:inputType="textEmailAddress" android:id="@+id/etUserName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/inputEmailLayout" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/inputPINLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin"  android:inputType="numberPassword" android:id="@+id/etPIN" android:maxLength="4"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/log_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignIn" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/inputPINLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@drawable/bt_round" android:textColor="#FFFFFF" android:textAllCaps="false"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@drawable/bt_round" android:textColor="#FFFFFF" android:textAllCaps="false"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pBSignIn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            tools:visibility="visible" android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>